--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@vee-validate/i18n": "^4.7.4",
+    "@vee-validate/rules": "^4.7.4",
+    "axios": "^1.3.3",
     "bootstrap": "^5.2.3",
     "pinia": "^2.0.28",
+    "vee-validate": "^4.7.4",
     "vue": "^3.2.45",
+    "vue-axios": "^3.5.2",
+    "vue-loading-overlay": "6.0",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
